tests/NormalTests/paczka1/fuzzy1/64737761.err
Error in line 1: A685 S88 8,6
Error in line 6: qNIo3 S88 68,4
Error in line 7: dDZ5phR8ucZ A991 34,2
Error in line 11: cfUj A991 91,6
Error in line 20: fZTiIQBqk4D S88 20,8
Error in line 16: cfUj A685 50,2
Error in line 25: x64rG A685 94,0
Error in line 37: x64rG S993 28,7
